--- a/styles-light.css
+++ b/styles-light.css
@@ -1,11 +1,11 @@
 /* Estilos generales para el tema claro */
 body {
-  background-color: #f5f5f5; /* Fondo gris claro */
-  color: #333; /* Texto negro */
+  background-color: #f5f5f5;
+  color: #333; 
 }
 a {
-    color: #333;
-  }
+  color: #333;
+}
 table {
   width: 100%;
   border-collapse: collapse;
@@ -16,4 +16,15 @@ td {
   padding: 8px;
   text-align: left;
 }
-/* Agrega estilos adicionales para otros elementos según sea necesario */
+
+button {
+  padding: 10px 20px;
+  background-color: #9a9b9c;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #3e3e3f;
+}
